test/zinc_source/compile_errors/error_handling/05_fail_outside_result.zn
// expected-error: fail is only valid in Result-returning functions or Result try blocks
fn main() {
    fail "boom"
}
